name:                dbrecord
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/mageshb/dbrecord#readme
license:             BSD3
license-file:        LICENSE
author:              Magesh B
maintainer:          magesh85@gmail.com
copyright:           © 2016 Magesh B
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:
                       DBRecord.Interface
                       DBRecord.Migration
                       DBRecord.Migration.Interface
                       DBRecord.Schema
                       DBRecord.Schema.Interface
                       DBRecord.Transaction
                       DBRecord.Query
                       DBRecord.Query.Interface
                       DBRecord.Internal.Postgres
                       DBRecord.Internal.PrimQuery
                       DBRecord.Internal.Postgres.Pretty
                       DBRecord.Internal.Postgres.Types
                       DBRecord.Internal.Postgres.SqlGen
                       DBRecord.Internal.Expr
                       DBRecord.Internal.Order
                       DBRecord.Internal.Predicate
                       DBRecord.Internal.Migration.Pretty
                       DBRecord.Internal.Migration.Types
                       DBRecord.Internal.Migration
                       DBRecord.Internal.Common
                       DBRecord.Internal.Types
                       DBRecord.Internal.DBTypeValidation
                       DBRecord.Internal.DBTypes
                       DBRecord.Internal.Schema

  build-depends:       base              >= 4.7 && < 5
                     , text              >=0.11.1
                     , uuid-types        >=1.0.0
                     , resource-pool     == 0.2.*
                     , postgresql-simple == 0.5.*
                     , transformers      == 0.5.*
                     , mtl               == 2.*
                     , case-insensitive  == 1.2.*
                     , base16-bytestring >= 0.1.1.6 && < 0.2
                     , pretty            >= 1.1
                     , bytestring
                     , aeson
                     , vector
                     , time              >= 1.5
                     , attoparsec
                     , unordered-containers >= 0.2
                     , scientific        >= 0.3 
                     , binary            >= 0.8

  default-language:    Haskell2010

test-suite dbrecord-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , text
                     , dbrecord
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mageshb/dbrecord
