name:                dbrecord-mongo
version:             0.1.0.0
synopsis:            DBRecord for MongoDB
description:         Please see README.md
homepage:            https://github.com/byteally/dbrecord#readme
license:             BSD3
license-file:        LICENSE
author:              Magesh B
maintainer:          magesh85@gmail.com
copyright:           © 2016 Magesh B
category:            Database
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     DBRecord.Mongo
                       DBRecord.Mongo.Types
                       DBRecord.Mongo.ExprGen
  build-depends:       base              >= 4.7 && < 5
                     , text              >=0.11.1
                     , dbrecord
                     , mongoDB
                     , bson

  default-language:    Haskell2010

test-suite dbrecord-mongo-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , text
                     , dbrecord
                     , tasty-hunit
                     , hspec
                     , mtl
                     , postgresql-simple >= 0.5
                     , mysql-haskell >= 0.8
                     , mongoDB
  other-modules:       Test.MigSpec
                       Test.QuerySpec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mageshb/dbrecord
