name:                dbrecord-mssql-odbc
version:             0.1.0.0
synopsis:            DBRecord for sql server using mssql-odbc driver
description:         Please see README.md
homepage:            https://github.com/byteally/dbrecord#readme
license:             BSD3
license-file:        LICENSE
author:              Magesh B
maintainer:          magesh85@gmail.com
copyright:           © 2016 Magesh B
category:            Database
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     DBRecord.MSSQL
                       DBRecord.MSSQL.Internal.Sql.Parser
                       DBRecord.MSSQL.Internal.Sql.Pretty
                       DBRecord.MSSQL.Internal.PrettyDDL
                       DBRecord.MSSQL.Internal.Query
                       DBRecord.MSSQL.Internal.Types
                       DBRecord.MSSQL.Internal.Reify
                                         
  build-depends:       base              >= 4.7 && < 5
                     , dbrecord
                     , text              >=0.11.1
                     -- , uuid              == 1.3.*
                     -- , resource-pool     == 0.2.*
                     -- , postgresql-simple == 0.5.*
                     -- , transformers      == 0.5.*
                     , mtl               == 2.*
                     -- , case-insensitive  == 1.2.*
                     , base16-bytestring >= 0.1.1.6 && < 0.2
                     , pretty            >= 1.1
                     , bytestring
                     -- , aeson
                     -- , vector
                     -- , time              >= 1.5
                     , attoparsec
                     , mssql-odbc
                     , resource-pool      == 0.2.*
                     , vector             == 0.12.*
                     , dbrecord-migration == 0.1.*
                     , profunctors
                     , unordered-containers >= 0.2
                     -- , uniplate             >= 1.6
                     -- , scientific        >= 0.3 
                     -- , binary            >= 0.8
                     -- , base64-bytestring >= 1.0
                     -- , time              == 1.6.*
                     , hashable
                     , odbc

  default-language:    Haskell2010

test-suite dbrecord-mssql-odbc-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base
                     , text
                     , dbrecord
                    --  , dbrecord-mssql-odbc
                     , odbc
                     , hspec
                     , mtl
                     , postgresql-simple >= 0.5
                     , mysql-haskell >= 0.8
                     , mongoDB
  other-modules:       
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/byteally/dbrecord
