name:                dbrecord-mysql-haskell
version:             0.1.0.0
synopsis:            DBRecord for MySQL using mysql-haskell driver
description:         Please see README.md
homepage:            https://github.com/byteally/dbrecord#readme
license:             BSD3
license-file:        LICENSE
author:              Magesh B
maintainer:          magesh85@gmail.com
copyright:           © 2016 Magesh B
category:            Database
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:
                    DBRecord.MySQL
                    DBRecord.MySQL.Internal.Sql.Pretty
                    DBRecord.MySQL.Internal.Sql.Parser
                    DBRecord.MySQL.Internal.PrettyDDL
                    DBRecord.MySQL.Internal.Reify
       
  build-depends:       base              >= 4.7 && < 5
                     , dbrecord
                     , text              >=0.11.1
                     -- , uuid              == 1.3.*
                     -- , resource-pool     == 0.2.*
                     -- , postgresql-simple == 0.5.*
                     -- , transformers      == 0.5.*
                     -- , mtl               == 2.*
                     -- , case-insensitive  == 1.2.*
                     , base16-bytestring >= 0.1.1.6 && < 0.2
                     , pretty            >= 1.1
                     , bytestring
                     -- , aeson
                     , vector
                     -- , time              >= 1.5
                     , attoparsec
                     , unordered-containers >= 0.2
                     -- , uniplate             >= 1.6
                     -- , scientific        >= 0.3 
                     -- , binary            >= 0.8
                     -- , base64-bytestring >= 1.0
                     -- , time              == 1.6.*
                     , mysql-haskell
                     , hashable
                     , io-streams
                     , mysql-haskell-nem

  default-language:    Haskell2010

test-suite dbrecord-mysql-haskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , text
                     , dbrecord
                     , tasty-hunit
                     , hspec
                     , mtl
                     , postgresql-simple >= 0.5
                     , mysql-haskell >= 0.8
                     , mongoDB
  other-modules:       Test.MigSpec
                       Test.QuerySpec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mageshb/dbrecord
