cabal-version:       3.0
name:                dbrecord-postgres-simple
version:             0.1.0.0
synopsis:            DBRecord for Postgres using postgres-simple driver
description:         Please see README.md
homepage:            https://github.com/byteally/dbrecord#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Magesh B
maintainer:          magesh85@gmail.com
copyright:           © 2016 Magesh B
category:            Database
build-type:          Simple

common ghc-opts
  ghc-options:         -Wall -Werror

common ghc2021Shim
  if impl(ghc >= 9.0)
    default-language:    GHC2021
  else
    default-language:    Haskell2010
    default-extensions:  BangPatterns
                       , BinaryLiterals
                       , ConstrainedClassMethods
                       , ConstraintKinds
                       , DeriveDataTypeable
                       , DeriveFoldable
                       , DeriveFunctor
                       , DeriveGeneric
                       , DeriveLift
                       , DeriveTraversable
                       , DoAndIfThenElse
                       , EmptyCase
                       , EmptyDataDecls
                       , EmptyDataDeriving
                       , ExistentialQuantification
                       , ExplicitForAll
                       , FieldSelectors
                       , FlexibleContexts
                       , FlexibleInstances
                       , ForeignFunctionInterface
                       , GADTSyntax
                       , GeneralisedNewtypeDeriving
                       , HexFloatLiterals
                       , ImplicitPrelude
                       , ImportQualifiedPost
                       , InstanceSigs
                       , KindSignatures
                       , MonomorphismRestriction
                       , MultiParamTypeClasses
                       , NamedFieldPuns
                       , NamedWildCards
                       , NumericUnderscores
                       , PatternGuards
                       , PolyKinds
                       , PostfixOperators
                       , RankNTypes
                       , RelaxedPolyRec
                       , ScopedTypeVariables
                       , StandaloneDeriving
                       , StandaloneKindSignatures
                       , StarIsType
                       , TraditionalRecordSyntax
                       , TupleSections
                       , TypeApplications
                       , TypeOperators
                       , TypeSynonymInstances  

common common-build-deps
  build-depends:       base              >= 4.7 && < 5
                     , text              >= 0.11.1
                     , aeson
                     , vector                     
                     , dbrecord-types
                     , bytestring                     

common tasty-discovery-conf
--  ghc-options: -F -pgmF=tasty-discover
  build-tool-depends: tasty-discover:tasty-discover
  build-depends: tasty-discover >= 5.0.0
  
library
  import:           ghc-opts
                  , common-build-deps
                  , ghc2021Shim
  hs-source-dirs:      src
  exposed-modules:  DBRecord.Postgres
                    DBRecord.Postgres.Internal.Sql.Pretty
                    DBRecord.Postgres.Internal.Sql.Parser
                    DBRecord.Postgres.Internal.PrettyDDL
                    DBRecord.Postgres.Internal.Reify
                    -- DBRecord.Postgres.Internal.Transaction
                    DBRecord.Postgres.Internal.Query
                    -- DBRecord.Postgres.Internal.Types
                    DBRecord.Postgres.Internal.LTree
                    DBRecord.Postgres.Internal.RegClass
                    DBRecord.Postgres.Internal.Interval
                    DBRecord.Postgres.Internal.TextSearch
                    DBRecord.Postgres.Internal.TextSearch.Query
                    DBRecord.Postgres.Internal.TextSearch.Vector                    


                  
  build-depends:       postgresql-simple == 0.6.*
                     , postgresql-libpq  == 0.9.*
                     , dbrecord
                     , dbrecord-types
                     , rec               >= 0.2
                     -- , dbrecord-migration
                     , pretty            == 1.1.*
                     , base16-bytestring >= 0.1.1.6 && < 1.1
                     , attoparsec
                     , unordered-containers
                     , hashable
                     , transformers
                     , resource-pool
                     , mtl
                     , unliftio
                     , exceptions
                     , monad-control
                     , transformers-base
                     , binary


test-suite dbrecord-postgres-simple-reify-test
  import:              ghc-opts
                     , common-build-deps
                     , ghc2021Shim
  type:                exitcode-stdio-1.0
  hs-source-dirs:      reify-test
  main-is:             Main.hs
  build-depends:       base
                     -- , dbrecord
                     , dbrecord-postgres-simple
                     , postgresql-simple
                        
test-suite dbrecord-postgres-simple-test
  import:              ghc-opts
                     , common-build-deps
                     , ghc2021Shim
                     , tasty-discovery-conf
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:       Test.PGS.SampleDB.DVDRentalTest
  build-depends:       dbrecord
                     , dbrecord:dbrecord-test-generic
                     , dbrecord-postgres-simple
                     , tasty >= 1.4
                     , tasty-hedgehog
                       -- >= 1.4.0.0
                     , hedgehog >= 1.1
                     , tasty-hunit
                     , mtl
                     , postgresql-simple
                     , unliftio-core
                     , monad-control
                     , transformers-base
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-extensions:  DataKinds
                     , TypeFamilies
 

source-repository head
  type:     git
  location: https://github.com/byteally/dbrecord
