name:                dbrecord-sqlite-simple
version:             0.1.0.0
synopsis:            DBRecord for Sqlite using sqlite-simple driver
description:         Please see README.md
homepage:            https://github.com/byteally/dbrecord#readme
license:             BSD3
license-file:        LICENSE
author:              Magesh B
maintainer:          magesh85@gmail.com
copyright:           © 2016 Magesh B
category:            Database
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall -Werror
  
  exposed-modules:    DBRecord.Sqlite
                      DBRecord.Sqlite.Internal.Sql.Pretty
                      DBRecord.Sqlite.Internal.Sql.Parser
                      DBRecord.Sqlite.Internal.PrettyDDL
                      DBRecord.Sqlite.Internal.Query
                      DBRecord.Sqlite.Internal.Types                      

  build-depends:      base              >= 4.7 && < 5
                    , sqlite-simple
                    , text              >=0.11.1
                    , dbrecord
                    , pretty            >= 1.1
                    , bytestring
                    -- , dbrecord-migration == 0.1.*
                     -- , aeson
                     , vector
                     -- , time              >= 1.5
                    , attoparsec
                    , unordered-containers >= 0.2
                     -- , uniplate             >= 1.6
                     -- , scientific        >= 0.3 
                     -- , binary            >= 0.8
                    , base64-bytestring >= 1.0
                    , base16-bytestring >= 0.1.1.6 && < 0.2
                    , transformers
                    , resource-pool
                    , mtl
                    , hashable
                    , interpolate
                    

                     -- , time              == 1.6.*

  default-language:    Haskell2010

test-suite dbrecord-sqlite-simple-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , text
                     , dbrecord
                     , tasty-hunit
                     , hspec
                     , mtl
                     , postgresql-simple >= 0.5
                     , mysql-haskell >= 0.8
                     , mongoDB
  other-modules:       Test.MigSpec
                       Test.QuerySpec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/byteally/dbrecord
