name:                dbrecord
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/byteally/dbrecord#readme
license:             BSD3
license-file:        LICENSE
author:              Magesh B
maintainer:          magesh85@gmail.com
copyright:           © 2016 Magesh B
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:
                       DBRecord.Interface
                       DBRecord.Migration
                       DBRecord.Migration.Interface
                       DBRecord.Query
                       DBRecord.Schema
                       DBRecord.Schema.Interface
                       DBRecord.Query.Interface
                       DBRecord.Internal.PrimQuery
                       DBRecord.Internal.Sql
                       DBRecord.Internal.Sql.DML
                       DBRecord.Internal.Sql.SqlGen
                       DBRecord.Internal.Expr
                       DBRecord.Internal.Order
                       DBRecord.Internal.Predicate
                       DBRecord.Internal.Window
                       DBRecord.Internal.Common
                       DBRecord.Internal.Lens                  
                       DBRecord.Internal.Types
                       DBRecord.Internal.DBTypeValidation
                       DBRecord.Internal.DDL
                       DBRecord.Internal.DBTypes
                       DBRecord.Internal.Schema

  build-depends:       base              >= 4.7 && < 5
                     , text              >=0.11.1
                     , uuid              == 1.3.*
                     , transformers      == 0.5.*
                     , mtl               == 2.*
                     , case-insensitive  == 1.2.*
                     , base16-bytestring >= 0.1.1.6 && < 0.2
                     , bytestring
                     , aeson
                     , vector
                     , time              >= 1.5
                     , unordered-containers >= 0.2
                     , uniplate             >= 1.6
                     , scientific        >= 0.3 
                     , binary            >= 0.8
                     , base64-bytestring >= 1.0
                     , time              == 1.6.*
                     , hashable          == 1.2.*

  default-language:    Haskell2010

test-suite dbrecord-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base
                     , text
                     , dbrecord
                     , tasty-hunit
                     , hspec
                     , mtl
                     , dbrecord-mysql-haskell
                     , dbrecord-mssql-odbc
                     , dbrecord-postgres-simple
                     , dbrecord-sqlite-simple
  other-modules:       Test.MigSpec
                       Test.QuerySpec
                       
                       Test.Chinook.MSSQL.Database
                       Test.Chinook.MySql.Database
                       Test.Chinook.Postgres.Database
                       Test.Chinook.Sqlite.Database
                       
                       Test.Chinook.Models.Album
                       Test.Chinook.Models.Artist
                       Test.Chinook.Models.Customer
                       Test.Chinook.Models.Genre
                       Test.Chinook.Models.Employee
                       Test.Chinook.Models.Invoice
                       Test.Chinook.Models.InvoiceLine
                       Test.Chinook.Models.MediaType
                       Test.Chinook.Models.Playlist
                       Test.Chinook.Models.PlaylistTrack
                       Test.Chinook.Models.Track
                       Test.Chinook.Models
                                                                     
                                              
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/byteally/dbrecord
